# bob

./: .gitignore  .travis.yml  README.md  bob.cabal  test
data/: arrows.rules  currencies.rules  diacritics.rules  digraphs.rules  ligatures.rules  main.rules  math.rules  names.txt  typography.rules  unsorted  vague.rules  weird.rules  words.rules
lib/: Bob.hs
rules/: arrows.rules  currencies.rules  diacritics.rules  digraphs.rules  ligatures.rules  main.rules  math.rules  typography.rules  weird.rules
src/: Game.hs  Main.hs
tests/: Main.hs
