name:                bob
version:             0.1.0.0
synopsis:            A small tool to help entering Unicode symbols
description:         A small tool to help entering Unicode symbols
homepage:            https://github.com/aelve/bob
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Application
build-type:          Simple
extra-source-files:  README.md
data-files:          rules/*.rules
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/bob.git

executable bob
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       Hclip == 3.*
                     , base >=4.8 && <4.9
                     , containers >= 0.5
                     , filepath >= 1.4
                     , gtk3 >= 0.13.8
                     , microlens >= 0.3
                     , split == 0.2.*
                     , text
                     , transformers >= 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010