name:                bob
version:             0.1.0.0
synopsis:            A small tool to help entering Unicode symbols
description:         A small tool to help entering Unicode symbols
homepage:            https://github.com/aelve/bob
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Application
build-type:          Simple
extra-source-files:  README.md
data-files:          rules/*.rules
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/bob.git

library
  exposed-modules:     Bob
  other-modules:       Paths_bob
  build-depends:       base == 4.8.*
                     , containers == 0.5.*
                     , directory == 1.2.*
                     , filepath == 1.4.*
                     , megaparsec == 4.0.*
                     , microlens-ghc == 0.3.*
                     , mtl == 2.2.*
                     , parsec == 3.1.*
                     , text == 1.2.*
  hs-source-dirs:      lib
  default-language:    Haskell2010
  buildable:           True
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable bob
  main-is:             Main.hs
  build-depends:       base == 4.8.*
                     , bob
                     , gtk3 == 0.13.*
                     , text == 1.2.*
                     , text-icu == 0.7.*
                     , transformers == 0.4.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
  buildable:           True

test-suite tests
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base == 4.8.*
                     , bob
                     , tasty == 0.11.*
                     , tasty-hunit == 0.9.*
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
