name:                bob
version:             0.1.0.0
synopsis:            A small tool to help entering Unicode symbols
description:         A small tool to help entering Unicode symbols
homepage:            https://github.com/aelve/bob
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Application
build-type:          Simple
extra-source-files:  README.md
data-files:
  data/*.rules
  data/names.txt
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/bob.git

library
  exposed-modules:     Bob
  other-modules:       Paths_bob
  build-depends:       base == 4.8.*
                     , base-prelude >= 0.1.21 && < 0.2
                     , containers == 0.5.*
                     , directory == 1.2.*
                     , filepath == 1.4.*
                     , megaparsec == 4.0.*
                     , microlens-platform >= 0.1.1
                     , mtl == 2.2.*
                     , text == 1.2.*
  hs-source-dirs:      lib
  default-language:    Haskell2010
  buildable:           True
  ghc-options:         -Wall -fno-warn-unused-do-bind

-- TODO: get rid of upper bounds

executable bob
  main-is:             Main.hs
  build-depends:       aeson == 0.10.*
                     , aeson-pretty == 0.7.*
                     , base == 4.8.*
                     , base-prelude >= 0.1.21 && < 0.2
                     , bob
                     , bytestring == 0.10.*
                     , directory >= 1.2
                     , fake-type == 0.2.*
                     , filepath >= 1.3
                     , containers == 0.5.*
                     , gtk3 == 0.13.*
                     , microlens-platform >= 0.1.1
                     , open-browser == 0.2.*
                     , text == 1.2.*
                     , text-icu == 0.7.*
                     , transformers == 0.4.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
  buildable:           True

executable bob-game
  main-is:             Game.hs
  build-depends:       base == 4.8.*
                     , base-prelude == 0.1.*
                     , gtk3 == 0.13.*
                     , random >= 1
                     , spoon == 0.3.*
                     , text == 1.2.*
                     , text-icu == 0.7.*
                     , transformers == 0.4.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
  buildable:           True

test-suite tests
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base == 4.8.*
                     , base-prelude == 0.1.*
                     , bob
                     , hspec == 2.2.*
                     , text == 1.2.*
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
